Bug Fix - Wrong paddings in action menus Bug Fix - Wrong path in manifest

--- a/client/src/less/components/action_menu.less
+++ b/client/src/less/components/action_menu.less
@@ -112,7 +112,7 @@ form[role="dialog"][data-type="object"] > menu > button {
   text-shadow: none;
   text-align: left;
   padding: 0 1rem;
-  margin: 0 1.5rem 1rem 1rem;
+  margin: 0 0 1rem .5rem;
   background: #5f5f5f padding-box;
   border-radius: 0.2rem;
   border: none;
